
add_library(modules
UsbCam/UsbCam.cpp
NetworkCam/NetworkCam.cpp
VideoFileReader/VideoFileReader.cpp
SlitCam/SlitCam.cpp
BackgroundExtractor/BackgroundExtractor.cpp
BackgroundSubtractorSimple/BackgroundSubtractorSimple.cpp
SimpleTracker/SimpleTracker.cpp
BlobSegmenter/BlobSegmenter.cpp
CascadeDetector/CascadeDetector.cpp
VideoOutput/VideoOutput.cpp
TemporalDifferencing/TemporalDifferencing.cpp
)

